tests/data/negative/test_asgn_data_cn_member.orb
data Foo {
    i32 cn x = 10;
}

fnc main() {
    Foo f1;
    Foo f2;
    f2 = f1;
}